# rust-playground

.github/workflows/: pages.yml
anxo-game/: .gitignore  AGENTS.md  Cargo.toml  TODO.md  pyproject.toml
anxo-game/assets/levels/: legend.txt  level1.txt
anxo-game/assets/levels/_lib/: __init__.py  game.pyi  level_api.py  level_api.pyi
anxo-game/assets/levels/_lib/level_api/: __init__.py  __init__.pyi
anxo-game/assets/levels/level1/: template.py
anxo-game/assets/levels/level2/: background.txt  evaluate.py  foreground.txt  template.py
anxo-game/scripts/: capture.sh
anxo-game/src/: commands.rs  level.rs  main.rs  python.rs  ui.rs
breo-cli/: Cargo.toml  README.md  TODO.md
breo-cli/src/: main.rs
datafusion-acp/: .gitignore  Cargo.toml  README.md
datafusion-acp/src/: acp_client.rs  claude_statement.rs  main.rs  mcp_server.rs  sql_executor.rs
datafusion-acp/tests/data/: events.json  products.csv  products_unicode.csv  sales.parquet
demo-app/: README.md  demo_app.py  newrelic.ini  requirements.txt
ebpf-aya/: .gitignore  lima-aya.yaml
ebpf-sniffer/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
ebpf-sniffer/.cargo/: config.toml
ebpf-sniffer/ebpf-sniffer/: Cargo.toml  build.rs
ebpf-sniffer/ebpf-sniffer-ebpf/: Cargo.toml  bpfel-unknown-none.json
ebpf-sniffer/ebpf-sniffer-ebpf/src/: main.rs
ebpf-sniffer/ebpf-sniffer/src/: main.rs
green-bench/: .gitignore  Cargo.toml
green-bench/scripts/: e2e_download.sh  install_candle_vllm.sh  run_candle_vllm.sh  test_candle_vllm.sh
green-bench/src/: main.rs
green-run/: .gitignore  Cargo.toml
green-run/src/: cli.rs  main.rs  output.rs
green-run/src/energy/: cpu_rapl.rs  gpu_nvml.rs  mock.rs  mod.rs
green-run/tests/: e2e_basic.rs
otel-service/: .gitignore  Cargo.toml  Dockerfile  README.md
otel-service/src/: main.rs
plugin-system/: .gitignore  Cargo.toml  README.md
plugin-system/private-plugin/: Cargo.toml
plugin-system/private-plugin/src/: lib.rs
plugin-system/public-cli/: Cargo.toml
plugin-system/public-cli/src/: main.rs
rplayer/: .gitignore  Cargo.toml  README.md
rplayer/src/: export.rs  input.rs  ipc.rs  log.rs  main.rs  model.rs  render.rs  ui.rs
scripts/: test-e2e.sh
semantic-cache/: .gitignore  Cargo.toml  PLAN_cluster_visual.md  README.md
semantic-cache/.cargo/: config.toml
semantic-cache/bench/: .gitignore  eval_cases.json  result.txt  run.sh
semantic-cache/crates/faq_cli/: Cargo.toml
semantic-cache/crates/faq_cli/src/: main.rs
semantic-cache/crates/faq_core/: Cargo.toml
semantic-cache/crates/faq_core/src/: candle_embed.rs  cluster.rs  embed.rs  eval.rs  lib.rs  minilm_embed.rs  model.rs  orchestration.rs  qwen3_embed.rs  retrieval.rs  storage.rs
semantic-cache/data/: faq_seed.jsonl
semantic-cache/models/: README.md
semantic-cache/site/: clusters.html  clusters.json
semantic-cache/specs/: candle-encoder.allium  candle-eval-orchestration.allium  embedding-input-compose.allium  embedding-policy.allium  questions.md  semantic-faq-cache-testing.allium  semantic-faq-cache.allium  text-normalization.allium
src/: error.rs  runner.rs  util.rs
