[package]
name = "anxo-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_camera",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "png",
    "x11",
] }
bevy_egui = "0.38.1"
egui_code_editor = "0.2"
rustpython-vm = { version = "0.3", default-features = false, features = ["compiler"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
