[package]
name = "breo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
skim = { version = "2.0.2", default-features = false }
toml = "0.8"
