[package]
name = "datafusion-acp"
version = "0.1.0"
edition = "2021"

[dependencies]
# SQL engine
datafusion = "52"

# ACP client
agent-client-protocol = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
anyhow = "1"

# MCP server
rmcp = { version = "0.6", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
tower = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
rustyline = "15"

# Agent resolution
which = "7"

# Arrow (for parquet writing in tests and CSV output)
arrow = { version = "55", features = ["csv", "json"] }
parquet = "55"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
