[package]
name = "otel_demo_receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.6"
bytes = "1.5"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace", "metrics", "logs"] }
prost = "0.14"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
