[package]
name = "ebpf-sniffer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
network-types = "0.0.5"

[[bin]]
name = "ebpf-sniffer-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
