[package]
name = "ebpf-sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dns-lookup = "2.0"
hex = "0.4"
libc = "0.2"
bytes = "1"

[build-dependencies]
aya-build = "0.1"
