[package]
name = "faq_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candle-core = "0.8"
candle-nn = "0.8"
chrono = { version = "0.4", features = ["serde"] }
half = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
