[package]
name = "faq_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
candle-core = "0.8"
candle-nn = "0.8"
chrono = { version = "0.4", features = ["serde"] }
half = "2"
nalgebra = "0.33"
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
